// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePickerNative Snapshots default snapshot 1`] = `
<DocumentFragment>
  .c4 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c4:not(.color-override) g,
.c4:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c4:not(.color-override) g[stroke-width],
.c4:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c4:not(.color-override) g[stroke-width] *,
.c4:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c4.start {
  margin-right: var(--bds-sizes-size-8);
}

.c4.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  width: calc(3.75rem * 5);
}

.c0 select {
  height: auto;
  margin-bottom: 0.5rem;
}

.c0 .textinput--wrapper input.incomplete:not(.focus):not(:focus) {
  opacity: 0;
}

.c0 .no-interaction {
  pointer-events: none;
}

.c0.c0.c0 .icon--after,
.c0.c0.c0.icon--after {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c0.c0.c0 .icon--after .picker-clear-button,
.c0.c0.c0.icon--after .picker-clear-button,
.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0rem;
  z-index: 1;
  pointer-events: all;
}

.c0.c0.c0 .icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0 .icon--after.picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after.picker-clear-button .icon.icon.icon path {
  fill: hsl(0,0%,0%,.60);
}

.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  margin-right: 0.625rem;
}

.c0 input::-webkit-inner-spin-button,
.c0 input::-webkit-clear-button,
.c0 input::-ms-clear {
  display: none;
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-calendar-picker-indicator {
  opacity: 0;
  cursor: pointer;
  margin-top: -1.125rem;
  margin-right: -2.5rem;
  height: 2rem;
  width: 2rem;
}

.c1 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c1 input,
.c1 textarea,
.c1 legend,
.c1 label,
.c1 span,
.c1 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c1 input.disabled,
.c1 textarea.disabled,
.c1 legend.disabled,
.c1 label.disabled,
.c1 span.disabled,
.c1 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c1 svg {
  box-sizing: border-box;
}

.c1 input,
.c1 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c1.item--before input {
  padding: 0;
}

.c1 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c1 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c1 .item--before.icon path,
.c1 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c1 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c1 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c1 .item--after.icon path,
.c1 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c1.state--success svg.icon--success,
.c1.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c1.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c1.has--placeholder label {
  display: none;
}

.c1.has--placeholder legend {
  display: none;
}

.c2 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c2.with-icon-before {
  left: 40px;
}

.c2.interaction--focused,
.c2.interaction--active,
.c2.interaction--completed,
.c2.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c2.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c2.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c2.size--small.interaction--focused,
.c2.size--small.interaction--active,
.c2.size--small.interaction--completed,
.c2.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c2.size--large {
  top: 16px;
}

.c2.size--large.interaction--focused,
.c2.size--large.interaction--active,
.c2.size--large.interaction--completed,
.c2.size--large.completed {
  top: -12px;
  left: 21px;
}

.c2.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c2.size--jumbo.interaction--focused,
.c2.size--jumbo.interaction--active,
.c2.size--jumbo.interaction--completed,
.c2.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c2.state--error {
  color: var(--bds-color-text-red);
}

.c2.hidden-label {
  opacity: 0;
}

.c5 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c5 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5.interaction--focused legend,
.c5.interaction--active legend,
.c5.interaction--completed legend,
.c5.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c5.interaction--focused legend span,
.c5.interaction--active legend span,
.c5.interaction--completed legend span,
.c5.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.interaction--focused,
.c5.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c5.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c5.size--medium {
  height: var(--bds-sizes-size-48);
}

.c5.size--medium.interaction--focused legend,
.c5.size--medium.interaction--active legend,
.c5.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--medium.interaction--focused legend span,
.c5.size--medium.interaction--active legend span,
.c5.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--small {
  height: var(--bds-sizes-size-40);
}

.c5.size--small.interaction--focused legend,
.c5.size--small.interaction--active legend,
.c5.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c5.size--small.interaction--focused legend span,
.c5.size--small.interaction--active legend span,
.c5.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--large {
  height: var(--bds-sizes-size-56);
}

.c5.size--large.interaction--focused legend,
.c5.size--large.interaction--active legend,
.c5.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--large.interaction--focused legend span,
.c5.size--large.interaction--active legend span,
.c5.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c5.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c5.size--jumbo.interaction--focused legend,
.c5.size--jumbo.interaction--active legend,
.c5.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c5.size--jumbo.interaction--focused legend span,
.c5.size--jumbo.interaction--active legend span,
.c5.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c3 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c3:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c3.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c3.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c3.state--error svg.icon--before path,
.c3.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c3.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c3 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c3 svg.icon.icon--success path,
.c3 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c3 svg.icon.icon--error path,
.c3 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c3 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c3.size--small {
  height: var(--bds-sizes-size-40);
}

.c3.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c3.size--small input,
.c3.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c3.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c3.size--large {
  height: var(--bds-sizes-size-56);
}

.c3.size--large input,
.c3.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c3.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c3.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c3.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c3.size--jumbo input,
.c3.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c3 svg.icon--error + .suffix,
.c3 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

<div
    class="datepicker-native"
  >
    <div
      class="c0 datepicker-text shape--rounded"
    >
      <div
        class="c1 backyard textinput--wrapper shape--rounded size--medium item--after interaction--incomplete"
      >
        <label
          class="c2 input-label size--medium state--default interaction--incomplete"
          for="1"
        />
        <div
          class="c3 form-control shape--rounded size--medium interaction--incomplete"
        >
          <input
            class="textinput type--date incomplete"
            id="1"
            required=""
            type="date"
            value=""
          />
          <svg
            aria-hidden="true"
            class="c4 icon icon-calendar no-interaction item--after"
            role="presentation"
            style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.1154 13.5424c1.2584 0 1.8846-.6262 1.8846-1.8665V4.3241c0-1.2403-.6262-1.8665-1.8846-1.8665H3.8906C2.6322 2.4576 2 3.0778 2 4.3241v7.3518c0 1.2463.6322 1.8665 1.8906 1.8665h8.2248Zm.0783-.9694H3.8003c-.5359 0-.8309-.283-.8309-.8429v-5.678c0-.5539.295-.8429.831-.8429h8.3933c.5359 0 .8369.289.8369.843V11.73c0 .5599-.301.8429-.8369.8429ZM7.1781 7.3708c.2108 0 .283-.0602.283-.271v-.3552c0-.2107-.0722-.277-.283-.277H6.823c-.2107 0-.283.0663-.283.277v.3552c0 .2108.0723.271.283.271h.3552Zm1.999 0c.2108 0 .283-.0602.283-.271v-.3552c0-.2107-.0723-.277-.283-.277H8.828c-.2168 0-.283.0663-.283.277v.3552c0 .2108.0662.271.283.271h.3492Zm2.0051 0c.2107 0 .2769-.0602.2769-.271v-.3552c0-.2107-.0662-.277-.2769-.277h-.3553c-.2107 0-.283.0663-.283.277v.3552c0 .2108.0723.271.283.271h.3553Zm-6.003 1.9689c.2107 0 .2769-.0602.2769-.271v-.3552c0-.2107-.0662-.271-.277-.271H4.824c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.271.283.271h.3552Zm1.999 0c.2107 0 .283-.0602.283-.271v-.3552c0-.2107-.0723-.271-.283-.271h-.3553c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.271.283.271h.3552Zm1.999 0c.2107 0 .283-.0602.283-.271v-.3552c0-.2107-.0724-.271-.283-.271h-.3493c-.2168 0-.283.0603-.283.271v.3552c0 .2108.0662.271.283.271h.3492Zm2.005 0c.2107 0 .2769-.0602.2769-.271v-.3552c0-.2107-.0662-.271-.2769-.271h-.3553c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.271.283.271h.3553Zm-6.003 1.9749c.2107 0 .2769-.0662.2769-.277v-.3552c0-.2107-.0662-.271-.277-.271H4.824c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.277.283.277h.3552Zm1.999 0c.2107 0 .283-.0662.283-.277v-.3552c0-.2107-.0723-.271-.283-.271h-.3553c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.277.283.277h.3552Zm1.999 0c.2107 0 .283-.0662.283-.277v-.3552c0-.2107-.0724-.271-.283-.271h-.3493c-.2168 0-.283.0603-.283.271v.3552c0 .2108.0662.277.283.277h.3492Z"
              fill-rule="evenodd"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="c5 text-input-fieldset size--medium interaction--incomplete"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatePickerNative Snapshots prop: dates DatePickerNative dates snapshot 1`] = `
<DocumentFragment>
  .c7 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c7:not(.color-override) g,
.c7:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c7:not(.color-override) g[stroke-width],
.c7:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c7:not(.color-override) g[stroke-width] *,
.c7:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c7.start {
  margin-right: var(--bds-sizes-size-8);
}

.c7.end {
  margin-left: var(--bds-sizes-size-8);
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  box-sizing: border-box;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  height: 100%;
}

.c5 .btn-label {
  display: inherit;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  -webkit-letter-spacing: .015rem;
  -moz-letter-spacing: .015rem;
  -ms-letter-spacing: .015rem;
  letter-spacing: .015rem;
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: 500;
}

.c5 .btn-label > .btn-start-icon {
  margin-right: var(--bds-sizes-size-8);
}

.c5 .btn-label > .btn-end-icon {
  margin-left: var(--bds-sizes-size-8);
}

.c5 .btn-label > .btn-end-icon svg {
  width: var(--bds-sizes-size-16);
  height: var(--bds-sizes-size-16);
}

.c5 .btn-label > .btn-start-icon,
.c5 .btn-label > .btn-end-icon,
.c5 .btn-label > .icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5.full-width {
  width: 100%;
  padding: var(--bds-sizes-size-12) var(--bds-sizes-size-32);
}

.c5.elevation {
  box-shadow: var(--bds-shadows-shadow-03);
}

.c5.variant--primary:enabled,
.c5.variant--primary.enabled {
  background-color: var(--btn-base);
  border-color: var(--btn-base);
}

.c5.variant--primary:enabled .btn-label,
.c5.variant--primary.enabled .btn-label {
  color: var(--btn-text);
}

.c5.variant--primary:enabled .btn-label .icon path,
.c5.variant--primary.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c5.variant--primary:hover,
.c5.variant--primary.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-hover);
}

.c5.variant--primary:focus,
.c5.variant--primary.focus {
  box-shadow: inset 0 0 0 1px var(--btn-base),inset 0px 0 0 2px var(--btn-focus);
}

.c5.variant--primary:focus:hover,
.c5.variant--primary.focus:hover {
  box-shadow: inset 0 0 0 1px var(--btn-hover),inset 0px 0 0 2px var(--btn-focus);
}

.c5.variant--primary:active,
.c5.variant--primary.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-pressed);
}

.c5.variant--primary:disabled,
.c5.variant--primary.disabled {
  background-color: var(--btn-disabled);
  border-color: transparent;
}

.c5.variant--primary:disabled .btn-label,
.c5.variant--primary.disabled .btn-label {
  color: var(--btn-disabled);
}

.c5.variant--primary:disabled .btn-label .icon path,
.c5.variant--primary.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c5.variant--primary.c4.variant--primary.size--jumbo:focus,
.c5.variant--primary.c5.variant--primary.size--jumbo.focus {
  box-shadow: inset 0 0 0 2px var(--btn-base),inset 0px 0 0 4px var(--btn-focus);
}

.c5.variant--secondary:enabled,
.c5.variant--secondary.enabled {
  background-color: transparent;
  border-color: var(--btn-base);
}

.c5.variant--secondary:enabled .btn-label,
.c5.variant--secondary.enabled .btn-label {
  color: var(--btn-text);
}

.c5.variant--secondary:enabled .btn-label .icon path,
.c5.variant--secondary.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c5.variant--secondary:hover,
.c5.variant--secondary.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-base);
}

.c5.variant--secondary:focus,
.c5.variant--secondary.focus {
  background-color: transparent;
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c5.variant--secondary:active,
.c5.variant--secondary:focus:active,
.c5.variant--secondary.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-focus);
}

.c5.variant--secondary:disabled,
.c5.variant--secondary.disabled {
  background-color: transparent;
  border-color: var(--btn-disabled);
}

.c5.variant--secondary:disabled .btn-label,
.c5.variant--secondary.disabled .btn-label {
  color: var(--btn-disabled);
}

.c5.variant--secondary:disabled .btn-label .icon path,
.c5.variant--secondary.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c5.variant--tertiary:enabled,
.c5.variant--tertiary.enabled {
  background-color: var(--btn-base-subdued);
  border-color: var(--btn-base-subdued);
}

.c5.variant--tertiary:enabled .btn-label,
.c5.variant--tertiary.enabled .btn-label {
  color: var(--btn-text);
}

.c5.variant--tertiary:enabled .btn-label .icon path,
.c5.variant--tertiary.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c5.variant--tertiary:hover,
.c5.variant--tertiary.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-hover);
}

.c5.variant--tertiary:focus,
.c5.variant--tertiary.focus {
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c5.variant--tertiary:focus:hover,
.c5.variant--tertiary.focus:hover {
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c5.variant--tertiary:active,
.c5.variant--tertiary.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-pressed);
}

.c5.variant--tertiary:disabled,
.c5.variant--tertiary.disabled {
  background-color: var(--btn-disabled-subdued);
  border-color: var(--btn-disabled-subdued);
}

.c5.variant--tertiary:disabled .btn-label,
.c5.variant--tertiary.disabled .btn-label {
  color: var(--btn-disabled);
}

.c5.variant--tertiary:disabled .btn-label .icon path,
.c5.variant--tertiary.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c5.variant--ghost:enabled,
.c5.variant--ghost.enabled {
  background-color: transparent;
  border-color: transparent;
}

.c5.variant--ghost:enabled .btn-label,
.c5.variant--ghost.enabled .btn-label {
  color: var(--btn-text);
}

.c5.variant--ghost:enabled .btn-label .icon path,
.c5.variant--ghost.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c5.variant--ghost:hover,
.c5.variant--ghost.hover {
  background-color: var(--btn-hover);
  border-color: transparent;
}

.c5.variant--ghost:focus,
.c5.variant--ghost.focus {
  background-color: transparent;
  border-color: transparent;
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c5.variant--ghost:focus:hover,
.c5.variant--ghost.focus:hover {
  background-color: var(--btn-hover);
  border-color: transparent;
}

.c5.variant--ghost:active,
.c5.variant--ghost:focus:active,
.c5.variant--ghost.active {
  background-color: var(--btn-pressed);
  border-color: transparent;
}

.c5.variant--ghost:disabled,
.c5.variant--ghost.disabled {
  background-color: transparent;
  border-color: transparent;
}

.c5.variant--ghost:disabled .btn-label,
.c5.variant--ghost.disabled .btn-label {
  color: var(--btn-disabled);
}

.c5.variant--ghost:disabled .btn-label .icon path,
.c5.variant--ghost.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c5.variant--inverse:enabled,
.c5.variant--inverse.enabled {
  background-color: var(--btn-base-subdued);
  border-color: var(--btn-base-subdued);
}

.c5.variant--inverse:enabled .btn-label,
.c5.variant--inverse.enabled .btn-label {
  color: var(--btn-text);
}

.c5.variant--inverse:enabled .btn-label .icon path,
.c5.variant--inverse.enabled .btn-label .icon path {
  fill: var(--btn-icon);
}

.c5.variant--inverse:hover,
.c5.variant--inverse.hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-hover);
}

.c5.variant--inverse:focus,
.c5.variant--inverse.focus {
  background-color: var(--btn-base-subdued);
  box-shadow: 0px 0 0 2px var(--btn-focus);
}

.c5.variant--inverse:focus:hover,
.c5.variant--inverse.focus:hover {
  background-color: var(--btn-hover);
  border-color: var(--btn-focus);
}

.c5.variant--inverse:active,
.c5.variant--inverse.active {
  background-color: var(--btn-pressed);
  border-color: var(--btn-pressed);
}

.c5.variant--inverse:disabled,
.c5.variant--inverse.disabled {
  background-color: var(--btn-base-subdued);
  border-color: var(--btn-base-subdued);
}

.c5.variant--inverse:disabled .btn-label,
.c5.variant--inverse.disabled .btn-label {
  color: var(--btn-disabled);
}

.c5.variant--inverse:disabled .btn-label .icon path,
.c5.variant--inverse.disabled .btn-label .icon path {
  fill: var(--btn-disabled);
}

.c5.shape--rounded {
  border-radius: var(--bds-border-radius-lg);
}

.c5.shape--squared {
  border-radius: 0;
}

.c5.shape--circle {
  border-radius: var(--bds-border-radius-circle);
}

.c5.size--small {
  min-height: var(--bds-sizes-size-40);
  padding: 0 var(--bds-sizes-size-20);
}

.c5.size--small .btn-label {
  font-size: var(--bds-sizes-size-12);
  line-height: var(--bds-sizes-size-16);
}

.c5.size--small .btn-label .btn-start-icon,
.c5.size--small .btn-label .btn-end-icon,
.c5.size--small .btn-label .icon {
  width: var(--bds-sizes-size-12);
  height: var(--bds-sizes-size-12);
}

.c5.size--medium {
  min-height: var(--bds-sizes-size-48);
  padding: 0 var(--bds-sizes-size-32);
}

.c5.size--medium .btn-label {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c5.size--medium .btn-label .btn-start-icon,
.c5.size--medium .btn-label .btn-end-icon,
.c5.size--medium .btn-label .icon {
  width: var(--bds-sizes-size-14);
  height: var(--bds-sizes-size-14);
}

.c5.size--large {
  min-height: var(--bds-sizes-size-56);
  padding: 0 var(--bds-sizes-size-32);
}

.c5.size--large .btn-label {
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
}

.c5.size--large .btn-label .btn-start-icon,
.c5.size--large .btn-label .btn-end-icon,
.c5.size--large .btn-label .icon {
  width: var(--bds-sizes-size-16);
  height: var(--bds-sizes-size-16);
}

.c5.size--jumbo {
  min-height: var(--bds-sizes-size-96);
  padding: 0 var(--bds-sizes-size-56);
}

.c5.size--jumbo .btn-label {
  font-size: var(--bds-sizes-size-24);
  line-height: var(--bds-sizes-size-40);
}

.c5.size--jumbo .btn-label .btn-start-icon,
.c5.size--jumbo .btn-label .btn-end-icon,
.c5.size--jumbo .btn-label .icon {
  width: var(--bds-sizes-size-24);
  height: var(--bds-sizes-size-24);
}

.c5.disabled {
  cursor: not-allowed;
}

.c5.disabled:active {
  pointer-events: none;
}

.c5.c5.c5 {
  outline: none;
  vertical-align: bottom;
  height: auto;
}

.c5.c5.c5::-moz-focus-inner {
  border: 0;
}

.c6.size--extra_small {
  min-width: var(--bds-sizes-size-32);
  min-height: var(--bds-sizes-size-32);
}

.c6.size--extra_small .btn-label > .btn-start-icon,
.c6.size--extra_small .btn-label > .btn-end-icon,
.c6.size--extra_small .btn-label > .icon {
  width: var(--bds-sizes-size-14);
  height: var(--bds-sizes-size-14);
}

.c6.size--small {
  min-width: var(--bds-sizes-size-40);
  min-height: var(--bds-sizes-size-40);
  padding: var(--bds-sizes-size-8);
}

.c6.size--small .btn-label > .btn-start-icon,
.c6.size--small .btn-label > .btn-end-icon,
.c6.size--small .btn-label > .icon {
  width: var(--bds-sizes-size-16);
  height: var(--bds-sizes-size-16);
}

.c6.size--medium {
  min-width: var(--bds-sizes-size-48);
  min-height: var(--bds-sizes-size-48);
  padding: var(--bds-sizes-size-12);
}

.c6.size--medium .btn-label > .btn-start-icon,
.c6.size--medium .btn-label > .btn-end-icon,
.c6.size--medium .btn-label > .icon {
  width: var(--bds-sizes-size-20);
  height: var(--bds-sizes-size-20);
}

.c6.size--large {
  min-width: var(--bds-sizes-size-56);
  min-height: var(--bds-sizes-size-56);
  padding: var(--bds-sizes-size-16);
}

.c6.size--large .btn-label > .btn-start-icon,
.c6.size--large .btn-label > .btn-end-icon,
.c6.size--large .btn-label > .icon {
  width: var(--bds-sizes-size-24);
  height: var(--bds-sizes-size-24);
}

.c6.size--jumbo {
  min-width: var(--bds-sizes-size-96);
  min-height: var(--bds-sizes-size-96);
  padding: var(--bds-sizes-size-32);
}

.c6.size--jumbo .btn-label > .btn-start-icon,
.c6.size--jumbo .btn-label > .btn-end-icon,
.c6.size--jumbo .btn-label > .icon {
  width: var(--bds-sizes-size-48);
  height: var(--bds-sizes-size-48);
}

.c1 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
}

.c1 select,
.c1 legend,
.c1 label,
.c1 span,
.c1 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  color: var(--bds-color-text-primary);
}

.c1 svg {
  box-sizing: border-box;
}

.c1 select {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  height: 100%;
  padding-left: var(--bds-sizes-size-16);
  padding-right: var(--bds-sizes-size-40);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
}

.c1.item--before select {
  padding-left: var(--bds-sizes-size-40);
}

.c1 .item--before {
  position: absolute;
  top: var(--bds-sizes-size-16);
  left: var(--bds-sizes-size-16);
}

.c1 .item--after {
  position: absolute;
  top: var(--bds-sizes-size-16);
  right: var(--bds-sizes-size-16);
}

.c1.size--small .item--after,
.c1.size--small .item--before {
  top: var(--bds-sizes-size-14);
}

.c1.size--large .item--after,
.c1.size--large .item--before {
  top: var(--bds-sizes-size-20);
}

.c1.size--jumbo .item--after,
.c1.size--jumbo .item--before {
  top: 1.375rem;
}

.c1.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c1.has--placeholder label {
  display: none;
}

.c1.has--placeholder legend {
  display: none;
}

.c1.stacked label.input-label.incomplete,
.c1.stacked label.input-label.interaction--completed,
.c1.stacked label.input-label.interaction--active,
.c1.stacked label.input-label.completed,
.c1.stacked label.input-label.interaction--focused {
  top: var(--bds-sizes-size-12);
  left: var(--bds-sizes-size-16);
  font-size: var(--bds-sizes-size-16);
}

.c1.stacked label.input-label.incomplete.size--small,
.c1.stacked label.input-label.interaction--completed.size--small,
.c1.stacked label.input-label.interaction--active.size--small,
.c1.stacked label.input-label.completed.size--small,
.c1.stacked label.input-label.interaction--focused.size--small {
  top: var(--bds-sizes-size-8);
}

.c1.stacked label.input-label.incomplete.size--large,
.c1.stacked label.input-label.interaction--completed.size--large,
.c1.stacked label.input-label.interaction--active.size--large,
.c1.stacked label.input-label.completed.size--large,
.c1.stacked label.input-label.interaction--focused.size--large {
  top: var(--bds-sizes-size-16);
}

.c1.stacked label.input-label.incomplete.size--jumbo,
.c1.stacked label.input-label.interaction--completed.size--jumbo,
.c1.stacked label.input-label.interaction--active.size--jumbo,
.c1.stacked label.input-label.completed.size--jumbo,
.c1.stacked label.input-label.interaction--focused.size--jumbo {
  top: var(--bds-sizes-size-20);
  font-size: var(--bds-sizes-size-20);
}

.c1.stacked .text-input-fieldset legend {
  max-width: 0.01px;
  padding: 0;
}

.c1.stacked select {
  opacity: 0;
}

.c1.stacked .input-label {
  font-weight: var(--bds-font-weight-semibold);
  color: var(--bds-color-text-primary);
}

.c1.stacked .input-label .select--value {
  margin-left: var(--bds-sizes-size-8);
  color: var(--bds-color-text-primary);
  font-weight: var(--bds-font-weight-regular);
}

.c1.stacked .input-label.state--error {
  color: var(--bds-color-text-red);
}

.c8 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c8 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c8 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c8.interaction--focused legend,
.c8.interaction--active legend,
.c8.interaction--completed legend,
.c8.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c8.interaction--focused legend span,
.c8.interaction--active legend span,
.c8.interaction--completed legend span,
.c8.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c8.interaction--focused,
.c8.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c8.interaction--completed,
.c8.completed {
  border-color: var(--bds-color-border-default);
}

.c8.interaction--active.completed {
  border-color: var(--bds-color-border-interactive);
}

.c8.size--medium {
  height: var(--bds-sizes-size-48);
}

.c8.size--medium.interaction--focused legend,
.c8.size--medium.interaction--active legend,
.c8.size--medium.interaction--completed legend,
.c8.size--medium.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-4);
}

.c8.size--medium.interaction--focused legend span,
.c8.size--medium.interaction--active legend span,
.c8.size--medium.interaction--completed legend span,
.c8.size--medium.completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c8.size--small {
  height: var(--bds-sizes-size-40);
}

.c8.size--small.interaction--focused legend,
.c8.size--small.interaction--active legend,
.c8.size--small.interaction--completed legend,
.c8.size--small.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-4);
}

.c8.size--small.interaction--focused legend span,
.c8.size--small.interaction--active legend span,
.c8.size--small.interaction--completed legend span,
.c8.size--small.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c8.size--large {
  height: var(--bds-sizes-size-56);
}

.c8.size--large.interaction--focused legend,
.c8.size--large.interaction--active legend,
.c8.size--large.interaction--completed legend,
.c8.size--large.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-4);
}

.c8.size--large.interaction--focused legend span,
.c8.size--large.interaction--active legend span,
.c8.size--large.interaction--completed legend span,
.c8.size--large.completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c8.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c8.size--jumbo.interaction--focused legend,
.c8.size--jumbo.interaction--active legend,
.c8.size--jumbo.interaction--completed legend,
.c8.size--jumbo.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-4);
}

.c8.size--jumbo.interaction--focused legend span,
.c8.size--jumbo.interaction--active legend span,
.c8.size--jumbo.interaction--completed legend span,
.c8.size--jumbo.completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c3 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3:hover fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c3:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c3.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c3.state--error svg.icon--before path,
.c3.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c3.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c3 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c3 svg.icon path,
.c3 svg.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c3 svg.icon.icon--success path,
.c3 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c3 svg.icon.icon--error path,
.c3 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c3.size--small {
  height: var(--bds-sizes-size-40);
}

.c3.size--small svg.icon {
  height: 14px;
  width: 14px;
}

.c3.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c3.size--large {
  height: var(--bds-sizes-size-56);
}

.c3.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c3.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c3.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c3.size--jumbo input,
.c3.size--jumbo textarea {
  font-size: var(--bds-sizes-size-24);
  line-height: var(--bds-sizes-size-32);
}

.c3 svg.icon--error + .suffix,
.c3 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

.c2 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c2.with-icon-before {
  left: 40px;
}

.c2.interaction--focused,
.c2.interaction--active,
.c2.interaction--completed {
  top: -12px;
  left: 16px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c2.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c2.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c2.size--small.interaction--focused,
.c2.size--small.interaction--active,
.c2.size--small.interaction--completed {
  top: -12px;
  left: 16px;
  font-size: var(--bds-sizes-size-12);
}

.c2.size--large {
  top: 16px;
}

.c2.size--large.interaction--focused,
.c2.size--large.interaction--active,
.c2.size--large.interaction--completed {
  top: -12px;
}

.c2.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c2.size--jumbo.interaction--focused,
.c2.size--jumbo.interaction--active,
.c2.size--jumbo.interaction--completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
}

.c2.state--error {
  color: var(--bds-color-text-red);
}

.c0 {
  width: calc(3.75rem * 5);
}

.c0 select {
  height: auto;
  margin-bottom: 0.5rem;
}

.c0 .textinput--wrapper input.incomplete:not(.focus):not(:focus) {
  opacity: 0;
}

.c0 .no-interaction {
  pointer-events: none;
}

.c0.c0.c0 .icon--after,
.c0.c0.c0.icon--after {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c0.c0.c0 .icon--after .picker-clear-button,
.c0.c0.c0.icon--after .picker-clear-button,
.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0rem;
  z-index: 1;
  pointer-events: all;
}

.c0.c0.c0 .icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0 .icon--after.picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after.picker-clear-button .icon.icon.icon path {
  fill: hsl(0,0%,0%,.60);
}

.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  margin-right: 0.625rem;
}

.c0 input::-webkit-inner-spin-button,
.c0 input::-webkit-clear-button,
.c0 input::-ms-clear {
  display: none;
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-calendar-picker-indicator {
  opacity: 0;
  cursor: pointer;
  margin-top: -1.125rem;
  margin-right: -2.5rem;
  height: 2rem;
  width: 2rem;
}

@media only screen and (min-width:66.0625rem) {
  .c5.size--small .btn-label {
    font-size: var(--bds-sizes-size-14);
  }

  .c5.size--small .btn-label .btn-start-icon,
  .c5.size--small .btn-label .btn-end-icon,
  .c5.size--small .btn-label .icon {
    width: var(--bds-sizes-size-14);
    height: var(--bds-sizes-size-14);
  }

  .c5.size--medium .btn-label {
    font-size: var(--bds-sizes-size-16);
  }

  .c5.size--medium .btn-label .btn-start-icon,
  .c5.size--medium .btn-label .btn-end-icon,
  .c5.size--medium .btn-label .icon {
    width: var(--bds-sizes-size-16);
    height: var(--bds-sizes-size-16);
  }

  .c5.size--large .btn-label {
    font-size: var(--bds-sizes-size-18);
  }

  .c5.size--large .btn-label .btn-start-icon,
  .c5.size--large .btn-label .btn-end-icon,
  .c5.size--large .btn-label .icon {
    width: var(--bds-sizes-size-18);
    height: var(--bds-sizes-size-18);
  }

  .c5.size--jumbo .btn-label {
    font-size: var(--bds-sizes-size-28);
  }

  .c5.size--jumbo .btn-label .btn-start-icon,
  .c5.size--jumbo .btn-label .btn-end-icon,
  .c5.size--jumbo .btn-label .icon {
    width: var(--bds-sizes-size-28);
    height: var(--bds-sizes-size-28);
  }
}

<div
    class="datepicker-native"
  >
    <div
      class="c0 datepicker-select shape--rounded"
    >
      <div
        class="c1 backyard select--wrapper shape--rounded size--medium"
      >
        <label
          class="c2 input-label size--medium state--default completed interaction--completed"
          for="0"
        />
        <div
          class="c3 form-control shape--rounded size--medium interaction--completed"
        >
          <select
            aria-label="0"
            class="select--input completed completed"
            id="0"
          >
            <option
              class="select-option"
              value="2020-07-18"
            >
              Yesterday 8:00 AM
            </option>
            <option
              class="select-option"
              value="2020-07-19"
            >
              Today 9:15 AM
            </option>
            <option
              class="select-option"
              disabled=""
              value="2020-07-20"
            >
              Tomorrow 9:45 AM
            </option>
            <option
              class="select-option"
              value="2020-07-21"
            >
              Next Day 10:15 AM
            </option>
          </select>
          <span
            class="select--arrow item--after icon"
          >
            <button
              aria-label="title"
              class="c4 c5 backyard button size--small variant--ghost color--neutral shape--rounded c6 icon-button picker-clear-button"
              color="neutral"
              style="--btn-base: hsl(0, 0%, 44%, 1); --btn-focus: hsl(0, 0%, 44%, 1); --btn-text: hsl(0, 0%, 0%, .87); --btn-icon: hsl(0, 0%, 0%, .87); --btn-disabled: hsl(0, 0%, 0%, .30); --btn-disabled-subdued: hsl(0, 0%, 96%, 1);"
              type="button"
            >
              <span
                class="label btn-label"
              >
                <svg
                  aria-hidden="true"
                  class="c7 icon icon-close-circle-filled"
                  role="presentation"
                  style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8 14c3.2824 0 6-2.7176 6-6 0-3.2765-2.7235-6-6.0059-6C4.7176 2 2 4.7235 2 8c0 3.2824 2.7235 6 6 6Zm2.1059-3.3882a.4976.4976 0 0 1-.353-.1471L7.9941 8.7l-1.753 1.7647c-.0882.0941-.2117.1471-.3529.1471-.2706 0-.494-.2236-.494-.5 0-.1353.0529-.253.147-.3412L7.3 8.0059 5.5412 6.2412c-.0941-.0824-.147-.206-.147-.3412 0-.2706.2235-.4882.494-.4882.1412 0 .253.053.3412.147l1.7647 1.7589 1.7765-1.7648c.1-.1058.2118-.1529.3412-.1529a.4933.4933 0 0 1 .4941.4941c0 .1353-.0412.247-.1471.3412L8.6941 8.0059l1.7588 1.753c.0942.094.1471.2117.1471.3529 0 .2764-.2176.5-.4941.5Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </span>
          <fieldset
            aria-hidden="true"
            class="c8 text-input-fieldset size--medium closed completed interaction--completed"
          >
            <legend>
              <span />
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatePickerNative Snapshots themes DatePickerNative dark theme snapshot 1`] = `
<DocumentFragment>
  .c4 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c4:not(.color-override) g,
.c4:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c4:not(.color-override) g[stroke-width],
.c4:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c4:not(.color-override) g[stroke-width] *,
.c4:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c4.start {
  margin-right: var(--bds-sizes-size-8);
}

.c4.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  width: calc(3.75rem * 5);
}

.c0 select {
  height: auto;
  margin-bottom: 0.5rem;
}

.c0 .textinput--wrapper input.incomplete:not(.focus):not(:focus) {
  opacity: 0;
}

.c0 .no-interaction {
  pointer-events: none;
}

.c0.c0.c0 .icon--after,
.c0.c0.c0.icon--after {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c0.c0.c0 .icon--after .picker-clear-button,
.c0.c0.c0.icon--after .picker-clear-button,
.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0rem;
  z-index: 1;
  pointer-events: all;
}

.c0.c0.c0 .icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0 .icon--after.picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after.picker-clear-button .icon.icon.icon path {
  fill: hsl(0,0%,100%,.60);
}

.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  margin-right: 0.625rem;
}

.c0 input::-webkit-inner-spin-button,
.c0 input::-webkit-clear-button,
.c0 input::-ms-clear {
  display: none;
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-calendar-picker-indicator {
  opacity: 0;
  cursor: pointer;
  margin-top: -1.125rem;
  margin-right: -2.5rem;
  height: 2rem;
  width: 2rem;
}

.c1 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c1 input,
.c1 textarea,
.c1 legend,
.c1 label,
.c1 span,
.c1 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c1 input.disabled,
.c1 textarea.disabled,
.c1 legend.disabled,
.c1 label.disabled,
.c1 span.disabled,
.c1 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c1 svg {
  box-sizing: border-box;
}

.c1 input,
.c1 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c1.item--before input {
  padding: 0;
}

.c1 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c1 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c1 .item--before.icon path,
.c1 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c1 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c1 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c1 .item--after.icon path,
.c1 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c1.state--success svg.icon--success,
.c1.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c1.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c1.has--placeholder label {
  display: none;
}

.c1.has--placeholder legend {
  display: none;
}

.c2 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c2.with-icon-before {
  left: 40px;
}

.c2.interaction--focused,
.c2.interaction--active,
.c2.interaction--completed,
.c2.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c2.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c2.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c2.size--small.interaction--focused,
.c2.size--small.interaction--active,
.c2.size--small.interaction--completed,
.c2.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c2.size--large {
  top: 16px;
}

.c2.size--large.interaction--focused,
.c2.size--large.interaction--active,
.c2.size--large.interaction--completed,
.c2.size--large.completed {
  top: -12px;
  left: 21px;
}

.c2.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c2.size--jumbo.interaction--focused,
.c2.size--jumbo.interaction--active,
.c2.size--jumbo.interaction--completed,
.c2.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c2.state--error {
  color: var(--bds-color-text-red);
}

.c2.hidden-label {
  opacity: 0;
}

.c5 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c5 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5.interaction--focused legend,
.c5.interaction--active legend,
.c5.interaction--completed legend,
.c5.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c5.interaction--focused legend span,
.c5.interaction--active legend span,
.c5.interaction--completed legend span,
.c5.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.interaction--focused,
.c5.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c5.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c5.size--medium {
  height: var(--bds-sizes-size-48);
}

.c5.size--medium.interaction--focused legend,
.c5.size--medium.interaction--active legend,
.c5.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--medium.interaction--focused legend span,
.c5.size--medium.interaction--active legend span,
.c5.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--small {
  height: var(--bds-sizes-size-40);
}

.c5.size--small.interaction--focused legend,
.c5.size--small.interaction--active legend,
.c5.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c5.size--small.interaction--focused legend span,
.c5.size--small.interaction--active legend span,
.c5.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--large {
  height: var(--bds-sizes-size-56);
}

.c5.size--large.interaction--focused legend,
.c5.size--large.interaction--active legend,
.c5.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--large.interaction--focused legend span,
.c5.size--large.interaction--active legend span,
.c5.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c5.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c5.size--jumbo.interaction--focused legend,
.c5.size--jumbo.interaction--active legend,
.c5.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c5.size--jumbo.interaction--focused legend span,
.c5.size--jumbo.interaction--active legend span,
.c5.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c3 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c3:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c3.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c3.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c3.state--error svg.icon--before path,
.c3.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c3.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c3 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c3 svg.icon.icon--success path,
.c3 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c3 svg.icon.icon--error path,
.c3 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c3 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c3.size--small {
  height: var(--bds-sizes-size-40);
}

.c3.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c3.size--small input,
.c3.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c3.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c3.size--large {
  height: var(--bds-sizes-size-56);
}

.c3.size--large input,
.c3.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c3.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c3.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c3.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c3.size--jumbo input,
.c3.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c3 svg.icon--error + .suffix,
.c3 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

<div
    class="datepicker-native"
  >
    <div
      class="c0 datepicker-text shape--rounded"
    >
      <div
        class="c1 backyard textinput--wrapper shape--rounded size--medium item--after interaction--incomplete"
      >
        <label
          class="c2 input-label size--medium state--default interaction--incomplete"
          for="1"
        />
        <div
          class="c3 form-control shape--rounded size--medium interaction--incomplete"
        >
          <input
            class="textinput type--date incomplete"
            id="1"
            required=""
            type="date"
            value=""
          />
          <svg
            aria-hidden="true"
            class="c4 icon icon-calendar no-interaction item--after"
            role="presentation"
            style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 100%, 1);"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.1154 13.5424c1.2584 0 1.8846-.6262 1.8846-1.8665V4.3241c0-1.2403-.6262-1.8665-1.8846-1.8665H3.8906C2.6322 2.4576 2 3.0778 2 4.3241v7.3518c0 1.2463.6322 1.8665 1.8906 1.8665h8.2248Zm.0783-.9694H3.8003c-.5359 0-.8309-.283-.8309-.8429v-5.678c0-.5539.295-.8429.831-.8429h8.3933c.5359 0 .8369.289.8369.843V11.73c0 .5599-.301.8429-.8369.8429ZM7.1781 7.3708c.2108 0 .283-.0602.283-.271v-.3552c0-.2107-.0722-.277-.283-.277H6.823c-.2107 0-.283.0663-.283.277v.3552c0 .2108.0723.271.283.271h.3552Zm1.999 0c.2108 0 .283-.0602.283-.271v-.3552c0-.2107-.0723-.277-.283-.277H8.828c-.2168 0-.283.0663-.283.277v.3552c0 .2108.0662.271.283.271h.3492Zm2.0051 0c.2107 0 .2769-.0602.2769-.271v-.3552c0-.2107-.0662-.277-.2769-.277h-.3553c-.2107 0-.283.0663-.283.277v.3552c0 .2108.0723.271.283.271h.3553Zm-6.003 1.9689c.2107 0 .2769-.0602.2769-.271v-.3552c0-.2107-.0662-.271-.277-.271H4.824c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.271.283.271h.3552Zm1.999 0c.2107 0 .283-.0602.283-.271v-.3552c0-.2107-.0723-.271-.283-.271h-.3553c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.271.283.271h.3552Zm1.999 0c.2107 0 .283-.0602.283-.271v-.3552c0-.2107-.0724-.271-.283-.271h-.3493c-.2168 0-.283.0603-.283.271v.3552c0 .2108.0662.271.283.271h.3492Zm2.005 0c.2107 0 .2769-.0602.2769-.271v-.3552c0-.2107-.0662-.271-.2769-.271h-.3553c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.271.283.271h.3553Zm-6.003 1.9749c.2107 0 .2769-.0662.2769-.277v-.3552c0-.2107-.0662-.271-.277-.271H4.824c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.277.283.277h.3552Zm1.999 0c.2107 0 .283-.0662.283-.277v-.3552c0-.2107-.0723-.271-.283-.271h-.3553c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.277.283.277h.3552Zm1.999 0c.2107 0 .283-.0662.283-.277v-.3552c0-.2107-.0724-.271-.283-.271h-.3493c-.2168 0-.283.0603-.283.271v.3552c0 .2108.0662.277.283.277h.3492Z"
              fill-rule="evenodd"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="c5 text-input-fieldset size--medium interaction--incomplete"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatePickerNative Snapshots themes DatePickerNative light theme snapshot 1`] = `
<DocumentFragment>
  .c4 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c4:not(.color-override) g,
.c4:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c4:not(.color-override) g[stroke-width],
.c4:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c4:not(.color-override) g[stroke-width] *,
.c4:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c4.start {
  margin-right: var(--bds-sizes-size-8);
}

.c4.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  width: calc(3.75rem * 5);
}

.c0 select {
  height: auto;
  margin-bottom: 0.5rem;
}

.c0 .textinput--wrapper input.incomplete:not(.focus):not(:focus) {
  opacity: 0;
}

.c0 .no-interaction {
  pointer-events: none;
}

.c0.c0.c0 .icon--after,
.c0.c0.c0.icon--after {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c0.c0.c0 .icon--after .picker-clear-button,
.c0.c0.c0.icon--after .picker-clear-button,
.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0rem;
  z-index: 1;
  pointer-events: all;
}

.c0.c0.c0 .icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after .picker-clear-button .icon.icon.icon path,
.c0.c0.c0 .icon--after.picker-clear-button .icon.icon.icon path,
.c0.c0.c0.icon--after.picker-clear-button .icon.icon.icon path {
  fill: hsl(0,0%,0%,.60);
}

.c0.c0.c0 .icon--after.picker-clear-button,
.c0.c0.c0.icon--after.picker-clear-button {
  margin-right: 0.625rem;
}

.c0 input::-webkit-inner-spin-button,
.c0 input::-webkit-clear-button,
.c0 input::-ms-clear {
  display: none;
}

.c0 input::-moz-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input:-ms-input-placeholder {
  opacity: 1;
  color: black;
}

.c0 input::-webkit-calendar-picker-indicator {
  opacity: 0;
  cursor: pointer;
  margin-top: -1.125rem;
  margin-right: -2.5rem;
  height: 2rem;
  width: 2rem;
}

.c1 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c1 input,
.c1 textarea,
.c1 legend,
.c1 label,
.c1 span,
.c1 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c1 input.disabled,
.c1 textarea.disabled,
.c1 legend.disabled,
.c1 label.disabled,
.c1 span.disabled,
.c1 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c1 svg {
  box-sizing: border-box;
}

.c1 input,
.c1 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c1.item--before input {
  padding: 0;
}

.c1 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c1 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c1 .item--before.icon path,
.c1 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c1 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c1 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c1 .item--after.icon path,
.c1 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c1.state--success svg.icon--success,
.c1.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c1.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c1.has--placeholder label {
  display: none;
}

.c1.has--placeholder legend {
  display: none;
}

.c2 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c2.with-icon-before {
  left: 40px;
}

.c2.interaction--focused,
.c2.interaction--active,
.c2.interaction--completed,
.c2.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c2.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c2.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c2.size--small.interaction--focused,
.c2.size--small.interaction--active,
.c2.size--small.interaction--completed,
.c2.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c2.size--large {
  top: 16px;
}

.c2.size--large.interaction--focused,
.c2.size--large.interaction--active,
.c2.size--large.interaction--completed,
.c2.size--large.completed {
  top: -12px;
  left: 21px;
}

.c2.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c2.size--jumbo.interaction--focused,
.c2.size--jumbo.interaction--active,
.c2.size--jumbo.interaction--completed,
.c2.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c2.state--error {
  color: var(--bds-color-text-red);
}

.c2.hidden-label {
  opacity: 0;
}

.c5 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c5 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5.interaction--focused legend,
.c5.interaction--active legend,
.c5.interaction--completed legend,
.c5.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c5.interaction--focused legend span,
.c5.interaction--active legend span,
.c5.interaction--completed legend span,
.c5.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.interaction--focused,
.c5.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c5.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c5.size--medium {
  height: var(--bds-sizes-size-48);
}

.c5.size--medium.interaction--focused legend,
.c5.size--medium.interaction--active legend,
.c5.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--medium.interaction--focused legend span,
.c5.size--medium.interaction--active legend span,
.c5.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--small {
  height: var(--bds-sizes-size-40);
}

.c5.size--small.interaction--focused legend,
.c5.size--small.interaction--active legend,
.c5.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c5.size--small.interaction--focused legend span,
.c5.size--small.interaction--active legend span,
.c5.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--large {
  height: var(--bds-sizes-size-56);
}

.c5.size--large.interaction--focused legend,
.c5.size--large.interaction--active legend,
.c5.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--large.interaction--focused legend span,
.c5.size--large.interaction--active legend span,
.c5.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c5.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c5.size--jumbo.interaction--focused legend,
.c5.size--jumbo.interaction--active legend,
.c5.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c5.size--jumbo.interaction--focused legend span,
.c5.size--jumbo.interaction--active legend span,
.c5.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c3 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c3:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c3.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c3.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c3.state--error svg.icon--before path,
.c3.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c3.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c3 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c3 svg.icon.icon--success path,
.c3 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c3 svg.icon.icon--error path,
.c3 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c3 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c3.size--small {
  height: var(--bds-sizes-size-40);
}

.c3.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c3.size--small input,
.c3.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c3.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c3.size--large {
  height: var(--bds-sizes-size-56);
}

.c3.size--large input,
.c3.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c3.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c3.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c3.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c3.size--jumbo input,
.c3.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c3 svg.icon--error + .suffix,
.c3 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

<div
    class="datepicker-native"
  >
    <div
      class="c0 datepicker-text shape--rounded"
    >
      <div
        class="c1 backyard textinput--wrapper shape--rounded size--medium item--after interaction--incomplete"
      >
        <label
          class="c2 input-label size--medium state--default interaction--incomplete"
          for="1"
        />
        <div
          class="c3 form-control shape--rounded size--medium interaction--incomplete"
        >
          <input
            class="textinput type--date incomplete"
            id="1"
            required=""
            type="date"
            value=""
          />
          <svg
            aria-hidden="true"
            class="c4 icon icon-calendar no-interaction item--after"
            role="presentation"
            style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.1154 13.5424c1.2584 0 1.8846-.6262 1.8846-1.8665V4.3241c0-1.2403-.6262-1.8665-1.8846-1.8665H3.8906C2.6322 2.4576 2 3.0778 2 4.3241v7.3518c0 1.2463.6322 1.8665 1.8906 1.8665h8.2248Zm.0783-.9694H3.8003c-.5359 0-.8309-.283-.8309-.8429v-5.678c0-.5539.295-.8429.831-.8429h8.3933c.5359 0 .8369.289.8369.843V11.73c0 .5599-.301.8429-.8369.8429ZM7.1781 7.3708c.2108 0 .283-.0602.283-.271v-.3552c0-.2107-.0722-.277-.283-.277H6.823c-.2107 0-.283.0663-.283.277v.3552c0 .2108.0723.271.283.271h.3552Zm1.999 0c.2108 0 .283-.0602.283-.271v-.3552c0-.2107-.0723-.277-.283-.277H8.828c-.2168 0-.283.0663-.283.277v.3552c0 .2108.0662.271.283.271h.3492Zm2.0051 0c.2107 0 .2769-.0602.2769-.271v-.3552c0-.2107-.0662-.277-.2769-.277h-.3553c-.2107 0-.283.0663-.283.277v.3552c0 .2108.0723.271.283.271h.3553Zm-6.003 1.9689c.2107 0 .2769-.0602.2769-.271v-.3552c0-.2107-.0662-.271-.277-.271H4.824c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.271.283.271h.3552Zm1.999 0c.2107 0 .283-.0602.283-.271v-.3552c0-.2107-.0723-.271-.283-.271h-.3553c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.271.283.271h.3552Zm1.999 0c.2107 0 .283-.0602.283-.271v-.3552c0-.2107-.0724-.271-.283-.271h-.3493c-.2168 0-.283.0603-.283.271v.3552c0 .2108.0662.271.283.271h.3492Zm2.005 0c.2107 0 .2769-.0602.2769-.271v-.3552c0-.2107-.0662-.271-.2769-.271h-.3553c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.271.283.271h.3553Zm-6.003 1.9749c.2107 0 .2769-.0662.2769-.277v-.3552c0-.2107-.0662-.271-.277-.271H4.824c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.277.283.277h.3552Zm1.999 0c.2107 0 .283-.0662.283-.277v-.3552c0-.2107-.0723-.271-.283-.271h-.3553c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.277.283.277h.3552Zm1.999 0c.2107 0 .283-.0662.283-.277v-.3552c0-.2107-.0724-.271-.283-.271h-.3493c-.2168 0-.283.0603-.283.271v.3552c0 .2108.0662.277.283.277h.3492Z"
              fill-rule="evenodd"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="c5 text-input-fieldset size--medium interaction--incomplete"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DatePickerNative Snapshots with helper text 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0.error input {
  border-color: hsl(350,73%,35%,1);
}

.c0.error input:focus + label,
.c0.error input:active + label {
  color: hsl(350,73%,35%,1);
}

.c0.error label {
  color: hsl(350,73%,35%,1);
}

.c0.error .helper-text {
  color: hsl(350,73%,35%,1);
}

.c0.success input {
  border-color: hsl(142,86%,28%,1);
}

.c0.success input:focus + label,
.c0.success input:active + label {
  color: hsl(142,86%,28%,1);
}

.c0.success label {
  color: hsl(142,86%,28%,1);
}

.c0.success .helper-text {
  color: hsl(142,86%,28%,1);
}

.c0.warning input {
  border-color: hsl(350,73%,35%,1);
}

.c0.warning input:focus + label,
.c0.warning input:active + label {
  color: hsl(0,0%,0%,.87);
}

.c0.warning label {
  color: hsl(0,0%,0%,.87);
}

.c0.warning .helper-text {
  color: hsl(0,0%,0%,.87);
}

.c8 {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  color: hsl(0,0%,0%,.87);
  font-size: var(--bds-font-tag-helper-text-mobile-font-size);
  line-height: var(--bds-font-tag-helper-text-mobile-line-height);
}

.c7 {
  margin: 0;
  padding-top: 0.25rem;
}

.c7 .typography {
  color: hsl(0,0%,0%,.60);
}

.c7 .typography .icon path {
  fill: hsl(0,0%,0%,.60);
}

.c7 .icon {
  vertical-align: text-top;
}

.c7 .helper-text-icon {
  margin-right: 0.5rem;
}

.c7.c7.indent .typography {
  padding-left: var(--helper-text-indent);
}

.c7.c7.disabled .typography {
  color: hsl(0,0%,0%,.30);
}

.c7.c7.disabled .typography .icon path {
  fill: hsl(0,0%,0%,.30);
}

.c7.error .typography {
  color: hsl(350,73%,35%,1);
}

.c7.error .typography .icon path {
  fill: hsl(350,73%,35%,1);
}

.c7.success .typography {
  color: hsl(142,86%,28%,1);
}

.c7.success .typography .icon path {
  fill: hsl(142,86%,28%,1);
}

.c7.warning .typography {
  color: hsl(350,73%,35%,1);
}

.c7.warning .typography .icon path {
  fill: hsl(350,73%,35%,1);
}

.c7.info .typography {
  color: hsl(213,84%,45%,1);
}

.c7.info .typography .icon path {
  fill: hsl(213,84%,45%,1);
}

.c5 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c5:not(.color-override) g,
.c5:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c5:not(.color-override) g[stroke-width],
.c5:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c5:not(.color-override) g[stroke-width] *,
.c5:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c5.start {
  margin-right: var(--bds-sizes-size-8);
}

.c5.end {
  margin-left: var(--bds-sizes-size-8);
}

.c1 {
  width: calc(3.75rem * 5);
}

.c1 select {
  height: auto;
  margin-bottom: 0.5rem;
}

.c1 .textinput--wrapper input.incomplete:not(.focus):not(:focus) {
  opacity: 0;
}

.c1 .no-interaction {
  pointer-events: none;
}

.c1.c1.c1 .icon--after,
.c1.c1.c1.icon--after {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 1;
}

.c1.c1.c1 .icon--after .picker-clear-button,
.c1.c1.c1.icon--after .picker-clear-button,
.c1.c1.c1 .icon--after.picker-clear-button,
.c1.c1.c1.icon--after.picker-clear-button {
  height: 2.5rem;
  width: 2.5rem;
  padding: 0rem;
  z-index: 1;
  pointer-events: all;
}

.c1.c1.c1 .icon--after .picker-clear-button .icon.icon.icon path,
.c1.c1.c1.icon--after .picker-clear-button .icon.icon.icon path,
.c1.c1.c1 .icon--after.picker-clear-button .icon.icon.icon path,
.c1.c1.c1.icon--after.picker-clear-button .icon.icon.icon path {
  fill: hsl(0,0%,0%,.60);
}

.c1.c1.c1 .icon--after.picker-clear-button,
.c1.c1.c1.icon--after.picker-clear-button {
  margin-right: 0.625rem;
}

.c1 input::-webkit-inner-spin-button,
.c1 input::-webkit-clear-button,
.c1 input::-ms-clear {
  display: none;
}

.c1 input::-moz-placeholder {
  opacity: 1;
  color: black;
}

.c1 input::-webkit-input-placeholder {
  opacity: 1;
  color: black;
}

.c1 input:-ms-input-placeholder {
  opacity: 1;
  color: black;
}

.c1 input::-webkit-calendar-picker-indicator {
  opacity: 0;
  cursor: pointer;
  margin-top: -1.125rem;
  margin-right: -2.5rem;
  height: 2rem;
  width: 2rem;
}

.c2 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c2 input,
.c2 textarea,
.c2 legend,
.c2 label,
.c2 span,
.c2 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c2 input.disabled,
.c2 textarea.disabled,
.c2 legend.disabled,
.c2 label.disabled,
.c2 span.disabled,
.c2 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c2 svg {
  box-sizing: border-box;
}

.c2 input,
.c2 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c2.item--before input {
  padding: 0;
}

.c2 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c2 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c2 .item--before.icon path,
.c2 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c2 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c2 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c2 .item--after.icon path,
.c2 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c2.state--success svg.icon--success,
.c2.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c2.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c2.has--placeholder label {
  display: none;
}

.c2.has--placeholder legend {
  display: none;
}

.c3 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c3.with-icon-before {
  left: 40px;
}

.c3.interaction--focused,
.c3.interaction--active,
.c3.interaction--completed,
.c3.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c3.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c3.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c3.size--small.interaction--focused,
.c3.size--small.interaction--active,
.c3.size--small.interaction--completed,
.c3.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c3.size--large {
  top: 16px;
}

.c3.size--large.interaction--focused,
.c3.size--large.interaction--active,
.c3.size--large.interaction--completed,
.c3.size--large.completed {
  top: -12px;
  left: 21px;
}

.c3.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c3.size--jumbo.interaction--focused,
.c3.size--jumbo.interaction--active,
.c3.size--jumbo.interaction--completed,
.c3.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c3.state--error {
  color: var(--bds-color-text-red);
}

.c3.hidden-label {
  opacity: 0;
}

.c6 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c6 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c6 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c6.interaction--focused legend,
.c6.interaction--active legend,
.c6.interaction--completed legend,
.c6.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c6.interaction--focused legend span,
.c6.interaction--active legend span,
.c6.interaction--completed legend span,
.c6.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c6.interaction--focused,
.c6.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c6.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c6.size--medium {
  height: var(--bds-sizes-size-48);
}

.c6.size--medium.interaction--focused legend,
.c6.size--medium.interaction--active legend,
.c6.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c6.size--medium.interaction--focused legend span,
.c6.size--medium.interaction--active legend span,
.c6.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c6.size--small {
  height: var(--bds-sizes-size-40);
}

.c6.size--small.interaction--focused legend,
.c6.size--small.interaction--active legend,
.c6.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c6.size--small.interaction--focused legend span,
.c6.size--small.interaction--active legend span,
.c6.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c6.size--large {
  height: var(--bds-sizes-size-56);
}

.c6.size--large.interaction--focused legend,
.c6.size--large.interaction--active legend,
.c6.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c6.size--large.interaction--focused legend span,
.c6.size--large.interaction--active legend span,
.c6.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c6.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c6.size--jumbo.interaction--focused legend,
.c6.size--jumbo.interaction--active legend,
.c6.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c6.size--jumbo.interaction--focused legend span,
.c6.size--jumbo.interaction--active legend span,
.c6.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c4 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c4:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c4.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c4.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c4.state--error svg.icon--before path,
.c4.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c4.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c4 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c4 svg.icon.icon--success path,
.c4 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c4 svg.icon.icon--error path,
.c4 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c4 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c4.size--small {
  height: var(--bds-sizes-size-40);
}

.c4.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c4.size--small input,
.c4.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c4.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c4.size--large {
  height: var(--bds-sizes-size-56);
}

.c4.size--large input,
.c4.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c4.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c4.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c4.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c4.size--jumbo input,
.c4.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c4 svg.icon--error + .suffix,
.c4 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

@media only screen and (min-width:66rem) {
  .c8 {
    font-size: var(--bds-font-tag-helper-text-desktop-font-size);
    line-height: var(--bds-font-tag-helper-text-desktop-line-height);
  }
}

<div
    class="c0 form-control"
  >
    <div
      class="datepicker-native"
    >
      <div
        class="c1 datepicker-text shape--rounded"
      >
        <div
          class="c2 backyard textinput--wrapper shape--rounded size--medium item--after interaction--incomplete"
        >
          <label
            class="c3 input-label size--medium state--default interaction--incomplete"
            for="3"
          />
          <div
            class="c4 form-control shape--rounded size--medium interaction--incomplete"
          >
            <input
              class="textinput type--date incomplete"
              id="3"
              required=""
              type="date"
              value=""
            />
            <svg
              aria-hidden="true"
              class="c5 icon icon-calendar no-interaction item--after"
              role="presentation"
              style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M12.1154 13.5424c1.2584 0 1.8846-.6262 1.8846-1.8665V4.3241c0-1.2403-.6262-1.8665-1.8846-1.8665H3.8906C2.6322 2.4576 2 3.0778 2 4.3241v7.3518c0 1.2463.6322 1.8665 1.8906 1.8665h8.2248Zm.0783-.9694H3.8003c-.5359 0-.8309-.283-.8309-.8429v-5.678c0-.5539.295-.8429.831-.8429h8.3933c.5359 0 .8369.289.8369.843V11.73c0 .5599-.301.8429-.8369.8429ZM7.1781 7.3708c.2108 0 .283-.0602.283-.271v-.3552c0-.2107-.0722-.277-.283-.277H6.823c-.2107 0-.283.0663-.283.277v.3552c0 .2108.0723.271.283.271h.3552Zm1.999 0c.2108 0 .283-.0602.283-.271v-.3552c0-.2107-.0723-.277-.283-.277H8.828c-.2168 0-.283.0663-.283.277v.3552c0 .2108.0662.271.283.271h.3492Zm2.0051 0c.2107 0 .2769-.0602.2769-.271v-.3552c0-.2107-.0662-.277-.2769-.277h-.3553c-.2107 0-.283.0663-.283.277v.3552c0 .2108.0723.271.283.271h.3553Zm-6.003 1.9689c.2107 0 .2769-.0602.2769-.271v-.3552c0-.2107-.0662-.271-.277-.271H4.824c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.271.283.271h.3552Zm1.999 0c.2107 0 .283-.0602.283-.271v-.3552c0-.2107-.0723-.271-.283-.271h-.3553c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.271.283.271h.3552Zm1.999 0c.2107 0 .283-.0602.283-.271v-.3552c0-.2107-.0724-.271-.283-.271h-.3493c-.2168 0-.283.0603-.283.271v.3552c0 .2108.0662.271.283.271h.3492Zm2.005 0c.2107 0 .2769-.0602.2769-.271v-.3552c0-.2107-.0662-.271-.2769-.271h-.3553c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.271.283.271h.3553Zm-6.003 1.9749c.2107 0 .2769-.0662.2769-.277v-.3552c0-.2107-.0662-.271-.277-.271H4.824c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.277.283.277h.3552Zm1.999 0c.2107 0 .283-.0662.283-.277v-.3552c0-.2107-.0723-.271-.283-.271h-.3553c-.2107 0-.283.0603-.283.271v.3552c0 .2108.0723.277.283.277h.3552Zm1.999 0c.2107 0 .283-.0662.283-.277v-.3552c0-.2107-.0724-.271-.283-.271h-.3493c-.2168 0-.283.0603-.283.271v.3552c0 .2108.0662.277.283.277h.3492Z"
                fill-rule="evenodd"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="c6 text-input-fieldset size--medium interaction--incomplete"
            />
          </div>
        </div>
      </div>
    </div>
    <span
      class="c7 helper-text default indent"
    >
      <span
        class="c8 typography variant--helper align--left"
        color="text_primary"
        style="padding-left: 1rem;"
      >
        Text Input Helper
      </span>
    </span>
  </div>
</DocumentFragment>
`;
